bk_ida/gccida/g0/eh_data_format_name
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eh_data_format_name/src/dwarf2asm.c:810:39: error: use of undeclared identifier 'format_names_3'
if ( ( unsigned int)format > 0xFF || !format_names_3[format] ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eh_data_format_name/src/dwarf2asm.c:812:8: error: use of undeclared identifier 'format_names_3'
return format_names_3[format]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/eh_data_format_name/src/obj/dwarf2asm.o] Error 1
